--- a/view/admin/common/_header.html
+++ b/view/admin/common/_header.html
@@ -1,5 +1,5 @@
 <div class="layui-header">
-    <div class="layui-logo">cwh5app</div>
+    <div class="layui-logo">{:get_system_config('site_name')}</div>
     <!-- 头部区域（可配合layui已有的水平导航） -->
     <ul class="layui-nav layui-layout-left">
         <li class="layui-nav-item"><a href="{:url('admin/Index/index')}">首页</a></li>
