--- a/view/admin/index/index.html
+++ b/view/admin/index/index.html
@@ -38,7 +38,7 @@
                         <div class="layui-form-item">
                             <div class="layui-form-label">网站名称</div>
                             <div class="layui-input-block">
-                                <input type="text" class="layui-input" readonly >
+                                <input type="text" class="layui-input" readonly value="{:get_system_config('site_name')}" >
                             </div>
                         </div>
                         <div class="layui-form-item">
