完成账户管理;

--- a/view/admin/login/index.html
+++ b/view/admin/login/index.html
@@ -31,7 +31,7 @@
                 <div class="layui-col-md4 layui-col-md-offset4">
                     <div class="login">
                         <div class="title">
-                            超微H5应用
+                            {:get_system_config('site_name')}
                         </div>
                         <div>
                             
