--- a/view/admin/common/_header.html
+++ b/view/admin/common/_header.html
@@ -9,15 +9,15 @@
     <ul class="layui-nav layui-layout-right">
         <li class="layui-nav-item">
             <a href="javascript:;">
-                <img src="http://t.cn/RCzsdCq" class="layui-nav-img">
-                贤心
+                <img src="{$admin.avatar}" class="layui-nav-img">
+                {$admin.nickname}
             </a>
             <dl class="layui-nav-child">
-                <dd><a href="">基本资料</a></dd>
-                <dd><a href="">安全设置</a></dd>
+                <dd><a href="{:url('Admin/edit')}">基本资料</a></dd>
+            <dd><a href="{:url('Admin/password')}">安全设置</a></dd>
             </dl>
         </li>
 
-        <li class="layui-nav-item"><a href="">退了</a></li>
+        <li class="layui-nav-item"><a href="{:url('Login/logout')}">退出</a></li>
     </ul>
 </div>
