--- a/view/index/index/index.html
+++ b/view/index/index/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>{:get_system_config('site_name')}</title>
 </head>
+
 <body>
-    <img src="" alt="">
+    <textarea id="README" style="display: none">
+        {:file_get_contents(app()->getRootPath().'README.md')}
+    </textarea>
+
+    <div id="README-PRE" style="max-width: 800px;margin: 0 auto">
+
+    </div>
+    <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/markdown-it/9.1.0/markdown-it.min.js"></script>
+    <script>
+        var md = window.markdownit();
+        var result = md.render($('#README').val());
+        $('#README-PRE').html(result)
+        
+    </script>
 </body>
+
 </html>
