添加统计代码

--- a/view/index/index/index.html
+++ b/view/index/index/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{:get_system_config('site_name')}</title>
+    {:get_system_config('site_tongji')}
 </head>
 
 <body>
@@ -24,6 +25,8 @@
         $('#README-PRE').html(result)
         
     </script>
+
+    
 </body>
 
 </html>
