--- a/view/admin/common/_header.html
+++ b/view/admin/common/_header.html
@@ -4,6 +4,7 @@
     <ul class="layui-nav layui-layout-left">
         <li class="layui-nav-item"><a href="{:url('admin/Index/index')}">首页</a></li>
         <li class="layui-nav-item"><a href="">用户管理</a></li>
+        <li class="layui-nav-item"><a href="{:url('File/index')}">文件管理</a></li>
         <li class="layui-nav-item"><a href="{:url('admin/System/index')}">系统设置</a></li>
     </ul>
     <ul class="layui-nav layui-layout-right">
