--- a/view/admin/login/index.html
+++ b/view/admin/login/index.html
@@ -34,8 +34,6 @@
                             {:get_system_config('site_name')}
                         </div>
                         <div>
-                            
-
                             <form class="layui-form layui-form-pane" action="">
                                 <div class="layui-form-item">
                                     <label class="layui-form-label">用户名</label>
@@ -49,6 +47,14 @@
                                     <div class="layui-input-block">
                                         <input type="password" name="password" required lay-verify="required"
                                             placeholder="请输入密码" autocomplete="off" class="layui-input">
+                                    </div>
+                                </div>
+                                <div class="layui-form-item">
+                                    <label class="layui-form-label">验证码</label>
+                                    <div class="layui-input-block">
+                                        <input type="text" name="captcha" required lay-verify="required"
+                                            placeholder="请输入验证码" autocomplete="off" class="layui-input">
+                                            <img src="/api/Captcha/build" onclick="this.src = '/api/Captcha/build?v='+Math.random()" style="cursor: pointer" alt="">
                                     </div>
                                     
                                 </div>
