--- a/view/admin/index/index.html
+++ b/view/admin/index/index.html
@@ -60,7 +60,9 @@
                             </div>
                         </div>
                         <div class="layui-form-item">
-                            <div class="layui-form-label">服务器版本</div>
+                            <div class="layui-form-label">服务器版本
+                                <a href="https://promotion.aliyun.com/ntms/act/qwbk.html?userCode=2fzx2rfo" target="_blank"><i class="layui-icon layui-icon-help"></i></a>
+                            </div>
                             <div class="layui-input-block">
                                 <input type="text" class="layui-input" readonly  value="{:php_uname('s')}{:php_uname('r')}">
                             </div>
