--- a/view/admin/file/index.html
+++ b/view/admin/file/index.html
@@ -27,15 +27,16 @@
                 </div>
                 <div class="main-container">
                     <div>
-                        <form action="" class="layui-form">
+                        <form action="" lay-filter="filter" class="layui-form">
+                            <input type="hidden" name="type" value="{$Request.param.type|default=1}">
                             <div class="layui-form-item">
                                 <div class="layui-inline">
                                     <label class="layui-form-label">范围</label>
-                                    <div class="layui-input-inline" style="width: 100px;">
-                                        <select name="city" lay-verify="">
+                                    <div class="layui-input-inline" style="width: 200px;">
+                                        <select name="status" lay-verify="">
                                             <option value="">全部</option>
                                             <option value="0">未使用(仅供预览)</option>
-                                            <option value="1">使用</option>
+                                            <option value="1">已使用</option>
                                             <option value="2">已删除</option>
                                             <option value="3">已清除</option>                                            
                                         </select>     
@@ -67,7 +68,7 @@
                                     <td colspan="10">暂无数据</td>
                                 </tr>';{/php}
                                 {volist name="list" id="vo" empty="$empty"}
-                                <tr>
+                                <tr data-id="{$vo.id}">
                                     <td>{$vo.id}</td>
                                     <td>
                                         {switch $vo.mime_type}
@@ -100,11 +101,15 @@
                                     </td>
                                     <td>
                                         <div class="layui-btn-container">
-                                            {if condition="!empty($vo->getData('used_time')) &&
-                                            empty($vo->getData('delete_time'))" }
-                                            <div class="layui-btn layui-btn-sm">强制清除文件</div>
+                                            {if condition="!empty($vo->getData('used_time')) && empty($vo->getData('delete_time'))" }
+                                            <div class="layui-btn layui-btn-sm force-clear">强制清除文件</div>
                                             {else /}
-                                            <div class="layui-btn layui-btn-sm">清除文件</div>
+                                                {if condition="empty($vo->getData('clear_time'))" }
+                                                    <div class="layui-btn layui-btn-sm clear">清除文件</div>
+                                                {/if}
+                                            {/if}
+                                            {if condition="empty($vo->getData('clear_time'))" }
+                                                <a class="layui-btn layui-btn-sm" href="{$vo.src}" target="_blank">下载</a>
                                             {/if}
 
                                         </div>
@@ -124,6 +129,49 @@
 
 
         {include file="common/_footer"}
+
+        <script>
+            layui.use(['layer','form'],function(){
+
+                var form = layui.form;
+
+                form.val('filter',{
+                    status:'{$Request.param.status}'
+                })
+
+                $('.clear').click(function(){
+                    var item = this;
+                    console.log($(item).parents('tr').data('id'));
+                    
+                    layer.confirm('确定要清除吗?清除后不能恢复',function(){
+                        $.get('{:url("File/clear")}',{
+                            id:$(item).parents('tr').data('id')
+                        },function(result){
+                            if(result.code == 0){
+                                layer.msg('删除成功');
+                            }else{
+                                layer.msg(result.msg)
+                            }
+                        })
+                    })
+                })
+                $('.force-clear').click(function(){
+                    var item = this;
+
+                    layer.confirm('确定要强制清除吗?该文件有可能正在使用',function(){
+                        $.get('{:url("File/clear")}',{
+                            id:$(item).parents('tr').data('id')
+                        },function(result){
+                            if(result.code == 0){
+                                layer.msg('删除成功');
+                            }else{
+                                layer.msg(result.msg)
+                            }
+                        })
+                    })
+                })
+            })
+        </script>
     </div>
 </body>
 
