实现后台操作日志记录;

--- a/view/admin/common/left_admin_manage.html
+++ b/view/admin/common/left_admin_manage.html
@@ -11,6 +11,9 @@
             <li class="layui-nav-item layui-nav-itemed">
                 <a class="" href="{:url('admin/AdminPermission/index')}">权限管理</a>
             </li>
+            <li class="layui-nav-item layui-nav-itemed">
+                <a class="" href="{:url('Admin/adminLog')}">操作日志</a>
+            </li>
         </ul>
     </div>
 </div>
