--- a/view/admin/admin_permission/index.html
+++ b/view/admin/admin_permission/index.html
@@ -44,7 +44,7 @@
                             <tbody>
                                 {volist name='list' id='vo'}
                                     
-                                <tr class="item" data-id="{$vo.id}">
+                                <tr class="item" data-id="{$vo.id}" data-is-log="{$vo->getData('is_log')}">
                                     <td>{$vo.id}</td>
                                     <td>
                                         <span>{$vo.name}</span>
@@ -56,6 +56,7 @@
                                     </td>
                                     <td>
                                         <div class="layui-btn-container">
+                                            <div class="layui-btn layui-btn-sm is-log" >{$vo.is_log}</div>
                                             <div class="layui-btn layui-btn-sm delete">删除</div>
                                         </div>
                                     </td>
@@ -68,6 +69,9 @@
                                {/if}
                             </tbody>
                         </table>
+                        <div>
+                            {$list->render()|raw}
+                        </div>
                     </div>
                 </div>
             </div>
@@ -109,7 +113,40 @@
                 })
 
                 $('.delete').click(function(){
-                    
+                    var item = this;
+                    layer.confirm('确定要删除吗?',function(){
+                        $.get('{:url("AdminPermission/delete")}',{
+                            id:$(item).parents('tr').data('id')
+                        },function(result){
+                            if(result.code == 0){
+                                layer.msg('删除成功');
+                                $(item).parents('tr').remove();
+                            }else{
+                                layer.msg(result.msg)
+                            }
+                        })
+                    })
+                })
+
+                $('.is-log').click(function(){
+                    var item = this;
+                    var isLog = $(item).parents('tr').data('is-log')
+                    if(isLog == 0){
+                        isLog = 1
+                    }else{
+                        isLog = 0
+                    }
+                    $.post('{:url("AdminPermission/update")}',{
+                        id:$(item).parents('tr').data('id'),
+                        is_log:isLog
+                    },function(){
+                        if(isLog == 1){
+                            $(item).text('记录')
+                        }else{
+                            $(item).text('不记录')
+
+                        }
+                    })
                 })
             })
         
