完成日志管理和管理员分组管理

--- a/view/admin/admin/admin_log.html
+++ b/view/admin/admin/admin_log.html
@@ -60,7 +60,7 @@
                                         <p>访问IP:{$vo.ip}</p>
                                     </td>
                                     <td>
-                                        <div class="layui-btn layui-btn-sm" onclick="layer.open({type:1,area:['400px','600px'],content:$(this).parents('tr').data('param')})">查看详情</div>
+                                        <div class="layui-btn layui-btn-sm" onclick="layer.open({type:1,area:['400px','600px'],content:JSON.stringify($(this).parents('tr').data('param'))})">查看详情</div>
                                         <br>
                                         {$vo.param}
                                     </td>
