--- a/view/admin/login/index.html
+++ b/view/admin/login/index.html
@@ -54,7 +54,7 @@
                                     <div class="layui-input-block">
                                         <input type="text" name="captcha" required lay-verify="required"
                                             placeholder="请输入验证码" autocomplete="off" class="layui-input">
-                                            <img src="/api/Captcha/build" onclick="this.src = '/api/Captcha/build?v='+Math.random()" style="cursor: pointer" alt="">
+                                            <img class="captcha" src="/api/Captcha/build" onclick="this.src = '/api/Captcha/build?v='+Math.random()" style="cursor: pointer" alt="">
                                     </div>
                                     
                                 </div>
@@ -91,6 +91,7 @@
                             location.href = '{:url("admin/Index/index")}'
                         }, 1200);
                     }else{
+                        $('.captcha').click()
                         layer.msg(result.msg);
                     }
                 })
