--- a/view/admin/common/_header.html
+++ b/view/admin/common/_header.html
@@ -3,7 +3,7 @@
     <!-- 头部区域（可配合layui已有的水平导航） -->
     <ul class="layui-nav layui-layout-left">
         <li class="layui-nav-item"><a href="{:url('admin/Index/index')}">首页</a></li>
-        <li class="layui-nav-item"><a href="">用户管理</a></li>
+        <li class="layui-nav-item"><a href="{:url('admin/User/index')}">用户管理</a></li>
         <li class="layui-nav-item"><a href="{:url('File/index')}">文件管理</a></li>
         <li class="layui-nav-item"><a href="{:url('admin/Admin/index')}">管理员管理</a></li>
         <li class="layui-nav-item"><a href="{:url('admin/System/index')}">系统设置</a></li>
