缺少权限验证

--- a/view/admin/admin/create.html
+++ b/view/admin/admin/create.html
@@ -7,6 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>基本资料</title>
     {include file="common/_require"}
+
+    <script>
+        var currentHeaderNavItem = 'Admin';
+        var currentLeftNavItem = 'index';
+    </script>
 </head>
 
 <body class="layui-layout-body">
