--- a/view/admin/admin/index.html
+++ b/view/admin/admin/index.html
@@ -5,8 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>应用管理</title>
+    <title>管理员管理</title>
     {include file="common/_require"}
+
+    <script>
+        var currentHeaderNavItem = 'Admin';
+        var currentLeftNavItem = 'index';
+    </script>
 </head>
 
 <body class="layui-layout-body">
