--- a/view/admin/admin_permission/index.html
+++ b/view/admin/admin_permission/index.html
@@ -7,6 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>应用管理</title>
     {include file="common/_require"}
+
+    <script>
+        var currentHeaderNavItem = 'Admin';
+        var currentLeftNavItem = 'premission';
+    </script>
 </head>
 
 <body class="layui-layout-body">
@@ -22,15 +27,11 @@
                 <div class="main-header">
                     <span class="layui-breadcrumb">
                         <a>首页</a>
-                        <a><cite>系统信息</cite></a>
+                        <a><cite>权限管理</cite></a>
                     </span>
                 </div>
                 <div class="main-container">
-                    <div>
-                        <div class="layui-btn-container">
-                            <div class="layui-btn">添加权限</div>
-                        </div>
-                    </div>
+                    
                     <div>
                         <table class="layui-table">
                             <thead>
