--- a/view/admin/common/left_admin_manage.html
+++ b/view/admin/common/left_admin_manage.html
@@ -2,16 +2,16 @@
     <div class="layui-side-scroll">
         <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
         <ul class="layui-nav layui-nav-tree" lay-filter="test">
-            <li class="layui-nav-item layui-nav-itemed">
+            <li class="layui-nav-item layui-nav-itemed left-nav-item" data-name="index">
                 <a class="" href="{:url('admin/Admin/index')}">管理员列表</a>
             </li>
-            <li class="layui-nav-item layui-nav-itemed">
+            <li class="layui-nav-item layui-nav-itemed left-nav-item" data-name="group">
                 <a class="" href="{:url('admin/AdminGroup/index')}">分组管理</a>
             </li>
-            <li class="layui-nav-item layui-nav-itemed">
+            <li class="layui-nav-item layui-nav-itemed left-nav-item" data-name="premission">
                 <a class="" href="{:url('admin/AdminPermission/index')}">权限管理</a>
             </li>
-            <li class="layui-nav-item layui-nav-itemed">
+            <li class="layui-nav-item layui-nav-itemed left-nav-item" data-name="log">
                 <a class="" href="{:url('Admin/adminLog')}">操作日志</a>
             </li>
         </ul>
