--- a/view/admin/common/left_system.html
+++ b/view/admin/common/left_system.html
@@ -2,10 +2,10 @@
     <div class="layui-side-scroll">
         <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
         <ul class="layui-nav layui-nav-tree" lay-filter="test">
-            <li class="layui-nav-item layui-nav-itemed">
+            <li class="layui-nav-item layui-nav-itemed left-nav-item" data-name="index">
                 <a class="" href="{:url('admin/System/index')}">系统管理</a>
             </li>
-            <li class="layui-nav-item layui-nav-itemed">
+            <li class="layui-nav-item layui-nav-itemed left-nav-item" data-name="others">
                 <a class="" href="{:url('admin/System/others')}">第三方管理</a>
             </li>
         </ul>
