--- a/view/admin/admin/admin_log.html
+++ b/view/admin/admin/admin_log.html
@@ -7,6 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>应用管理</title>
     {include file="common/_require"}
+
+    <script>
+        var currentHeaderNavItem = 'Admin';
+        var currentLeftNavItem = 'log';
+    </script>
 </head>
 
 <body class="layui-layout-body">
@@ -22,7 +27,7 @@
                 <div class="main-header">
                     <span class="layui-breadcrumb">
                         <a>首页</a>
-                        <a><cite>系统信息</cite></a>
+                        <a><cite>操作日志</cite></a>
                     </span>
                 </div>
                 <div class="main-container">
