--- a/view/admin/admin/password.html
+++ b/view/admin/admin/password.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>基本资料</title>
     {include file="common/_require"}
+
+    <script>
+        var currentHeaderNavItem = 'Login';
+        var currentLeftNavItem = 'password';
+    </script>
 </head>
 <body class="layui-layout-body">
     
