--- a/view/admin/admin_group/index.html
+++ b/view/admin/admin_group/index.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>应用管理</title>
     {include file="common/_require"}
+
+    <script>
+        var currentHeaderNavItem = 'Admin';
+        var currentLeftNavItem = 'group';
+    </script>
 </head>
 <body class="layui-layout-body">
     
@@ -20,7 +25,7 @@
                 <div class="main-header">
                     <span class="layui-breadcrumb">
                         <a>首页</a>
-                        <a><cite>系统信息</cite></a>
+                        <a><cite>分组管理</cite></a>
                     </span>
                 </div>
                 <div class="main-container">
