--- a/view/admin/common/模板.html
+++ b/view/admin/common/模板.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>应用管理</title>
     {include file="common/_require"}
+
+    <script>
+        var currentHeaderNavItem = 'Index';
+        var currentLeftNavItem = 'index';
+    </script>
 </head>
 <body class="layui-layout-body">
     
