--- a/view/admin/system/others.html
+++ b/view/admin/system/others.html
@@ -7,6 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>系统管理</title>
     {include file="common/_require"}
+
+    <script>
+        var currentHeaderNavItem = 'System';
+        var currentLeftNavItem = 'others';
+    </script>
     <style>
         .layui-form-pane .layui-form-label{
             width:160px 
