--- a/view/admin/user/index.html
+++ b/view/admin/user/index.html
@@ -7,6 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>应用管理</title>
     {include file="common/_require"}
+
+    <script>
+        var currentHeaderNavItem = 'User';
+        var currentLeftNavItem = 'index';
+    </script>
 </head>
 
 <body class="layui-layout-body">
