增加版权链接

--- a/view/admin/common/_footer.html
+++ b/view/admin/common/_footer.html
@@ -1,4 +1,4 @@
 <div class="layui-footer">
     <!-- 底部固定区域 -->
-    © layui.com - 底部固定区域
+    © www.ulthon.com - <a href="http://www.ulthon.com">奥宏网络科技有限公司</a>
 </div>
