去掉测试登录

--- a/view/admin/login/index.html
+++ b/view/admin/login/index.html
@@ -39,21 +39,21 @@
                                     <label class="layui-form-label">用户名</label>
                                     <div class="layui-input-block">
                                         <input type="text" name="account" required lay-verify="required"
-                                            placeholder="请输入用户名" value="test(直接登陆即可)" autocomplete="off" class="layui-input">
+                                            placeholder="请输入用户名" value="" autocomplete="off" class="layui-input">
                                     </div>
                                 </div>
                                 <div class="layui-form-item">
                                     <label class="layui-form-label">密码</label>
                                     <div class="layui-input-block">
                                         <input type="password" name="password" required lay-verify="required"
-                                            placeholder="请输入密码" value="test(直接登陆即可)" autocomplete="off" class="layui-input">
+                                            placeholder="请输入密码" value="" autocomplete="off" class="layui-input">
                                     </div>
                                 </div>
                                 <div class="layui-form-item">
                                     <label class="layui-form-label">验证码</label>
                                     <div class="layui-input-block">
                                         <input type="text" name="captcha" required lay-verify="required"
-                                            placeholder="请输入验证码" autocomplete="off" value="test(直接登陆即可)" class="layui-input">
+                                            placeholder="请输入验证码" autocomplete="off" value="" class="layui-input">
                                             <img class="captcha" src="/api/Captcha/build" onclick="this.src = '/api/Captcha/build?v='+Math.random()" style="cursor: pointer" alt="">
                                     </div>
                                     
