修改表格样式

--- a/view/admin/common/_require.html
+++ b/view/admin/common/_require.html
@@ -9,6 +9,10 @@
     .main-container{
         margin-top: 10px;
     }
+    .layui-table img{
+        max-width: 60px;
+        max-height: 60px;;;
+    }
 </style>
 
 <script>
@@ -36,3 +40,14 @@
     })
 </script>
 {:get_system_config('site_tongji')}
+
+<script>
+var _hmt = _hmt || [];
+(function() {
+    var hm = document.createElement("script");
+    hm.src = "https://hm.baidu.com/hm.js?acfaf971e7aa8c71a132e7fc5f8b5896";
+    var s = document.getElementsByTagName("script")[0]; 
+    s.parentNode.insertBefore(hm, s);
+})();
+</script>
+    
