--- a/view/admin/user/index.html
+++ b/view/admin/user/index.html
@@ -35,7 +35,7 @@
                         <a class="layui-btn" href="{:url('create')}"> 添加用户</a>
                     </div>
                     <div>
-                        <table class="layui-table">
+                        <table class="layui-table" lay-skin="line">
                             <thead>
                                 <tr>
                                     <th>ID</th>
