--- a/view/index/index/index.html
+++ b/view/index/index/index.html
@@ -7,6 +7,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{:get_system_config('site_name')}</title>
     {:get_system_config('site_tongji')}
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+          var hm = document.createElement("script");
+          hm.src = "https://hm.baidu.com/hm.js?acfaf971e7aa8c71a132e7fc5f8b5896";
+          var s = document.getElementsByTagName("script")[0]; 
+          s.parentNode.insertBefore(hm, s);
+        })();
+        </script>
+        
 </head>
 
 <body>
