使用富文本编辑器实现用户协议编辑功能

--- a/view/admin/common/left_system.html
+++ b/view/admin/common/left_system.html
@@ -8,6 +8,9 @@
             <li class="layui-nav-item layui-nav-itemed left-nav-item" data-name="others">
                 <a class="" href="{:url('admin/System/others')}">第三方管理</a>
             </li>
+            <li class="layui-nav-item layui-nav-itemed left-nav-item" data-name="agreement">
+                <a class="" href="{:url('admin/System/agreement')}">用户协议管理</a>
+            </li>
         </ul>
     </div>
 </div>
